@@ -1,8 +1,8 @@
 Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
-Version: 1.5.2
-Date: 2021-01-06
+Version: 1.5.3
+Date: 2021-04-28
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
