@@ -10,6 +10,7 @@ plotStationary(
   col = NULL,
   plotCI = FALSE,
   alpha = 0.95,
+  return = FALSE,
   ...
 )
 }
@@ -24,6 +25,8 @@ If none are specified, the means of any covariates appearing in the model are us
 \item{plotCI}{Logical indicating whether to include confidence intervals in plots (default: FALSE)}
 
 \item{alpha}{Significance level of the confidence intervals (if \code{plotCI=TRUE}). Default: 0.95 (i.e. 95\% CIs).}
+
+\item{return}{Logical indicating whether to return a list containing estimates, SEs, CIs, and covariate values used to create the plots for each mixture and state. Ignored if \code{plotCI=FALSE}. Default: \code{FALSE}.}
 
 \item{...}{Additional arguments passed to \code{graphics::plot}. These can currently include \code{cex.axis}, \code{cex.lab}, \code{cex.legend}, \code{cex.main}, \code{legend.pos}, and \code{lwd}. See \code{\link[graphics]{par}}. \code{legend.pos} can be a single keyword from the list ``bottomright'', ``bottom'', ``bottomleft'', ``left'', ``topleft'', ``top'', ``topright'', ``right'', and ``center''.}
 }
