@@ -1,3 +1,10 @@
+momentuHMM 1.5.3 2021-04-28
+-----------------
+NEW FEATURES
+
+* 'return' argument added to plotStationary function
+
+
 momentuHMM 1.5.2 2021-01-06
 -----------------
 NEW FEATURES
